Rule out two fixes for the module access failure and find the asymmetry
Both candidate fixes are dead, each for a measured reason. Reflecting the layer's
controller cannot work: javap on java.lang.ModuleLayer in JDK 17 shows fields cf,
parents, nameToModule, allLayers, modules, servicesCatalog and CLV - there is no
controller field at all, since a Controller only exists as the return value of
defineModules. And making FML treat the jar as a mod does not follow from metadata:
adding META-INF/neoforge.mods.toml next to mods.toml changed nothing, the same three
'Found mod file' lines and the identical error.

FML 2.0.17 never calls addExports either - scanning every class in loader-2.0.17.jar
for the string finds zero hits.

The asymmetry is the useful part. On the verified 1.21.4 line OptiFine's patches do
apply (Targets: 474) and its OptionInstance patch references SliderableValueSetInt just
as 1.20.4's does, yet that line logs no IllegalAccessError. The same OptiFine code
passes the module check under FML 21.4 and fails under 2.0.17, so the difference is
what the two FML versions grant, and it is not in the FML loader jar - securejarhandler
and the neoforge jar are next to scan.

First step next round is a probe rather than another inference: log the real module
graph at runtime - the game module's packages, isExported(pkg, ourModule), canRead, our
module's name and layer - the way ReloadProbe does, behind a system property.